Fix for WMS-9480: Total content is not visible if the panel is set to full screen
(cherry picked from commit 5608d0b869e6bf59f106ad922389a4957bd6202f)

--- a/src/main/webapp/scripts/modules/layouts/styles/less/layouts.less
+++ b/src/main/webapp/scripts/modules/layouts/styles/less/layouts.less
@@ -162,6 +162,9 @@ body {
     top: 0.2em;
     bottom: 0.2em;
     margin: 0 !important;
+    .panel-content {
+      overflow: auto;
+    }
     .app-panel-footer {
       position: absolute;
       left: 0;
